<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.universe.zany.taskbreaker.view.HomeFragment"
    android:id="@+id/frameLayout2">


    <Button
        android:id="@+id/frg_home_today_button"
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:elevation="20dp"
        android:text="@string/tasks_in_today"
        app:layout_constraintDimensionRatio="1:1.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frg_home_setting_button" />

    <Button
        android:id="@+id/frg_home_newtask_button"
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:elevation="20dp"
        android:text="@string/new_task"
        app:layout_constraintDimensionRatio="1:1.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frg_home_month_button" />

    <Button
        android:id="@+id/frg_home_month_button"
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="76dp"
        android:elevation="20dp"
        android:text="@string/tasks_in_month"
        app:layout_constraintDimensionRatio="1:1.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/frg_home_setting_button"
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="76dp"
        android:elevation="20dp"
        android:text="@string/statistics"
        app:layout_constraintDimensionRatio="1:1.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/frg_home_created_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/frg_home_failed_textview"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/frg_home_failed_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/frg_home_created_textview" />
</android.support.constraint.ConstraintLayout>
